# gl-starter

./: .gitignore  CMakeLists.txt  README.md  yaml.txt
.github/workflows/: cmake-single-platform.yml  linux-ubuntu.yml  windows.yaml
src/: CMakeLists.txt  main.cpp
src/assets/: asset_converter.cpp  asset_converter.h  mesh.cpp  mesh.h  model.cpp  model.h
src/core/: application.cpp  application.h
src/engine/: base_engine.cpp  base_engine.h  gl_base_engine.cpp  gl_base_engine.h  gl_engine.cpp  gl_engine.h
src/exes/: computeDemo.cpp  deferredDemo.cpp  pbrDemo.cpp
src/renderer/: base_renderer.cpp  gl_renderer.cpp  gl_renderer.h
src/shader/: compute.cpp  compute.h  shader.cpp
src/ui/: editor.h
src/utils/: camera.cpp  camera.h  common_primitives.h  file_watcher.cpp  functions.cpp  functions.h  gl_compute.cpp  gl_funcs.cpp  gl_funcs.h  gl_model.cpp  gl_model.h  gl_types.cpp  gl_types.h  paths.h  shader.cpp  shader.h  types.h
